--- a/Sprint1/FDair_V1_sprint1.html
+++ b/Sprint1/FDair_V1_sprint1.html
@@ -3,31 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlyDreamAir Loyalty Program</title>
+    <title>FlyDreamAir Loyalty Program - Dashboard</title>
 </head>
-<body>
-    <header>
-        <h1>FlyDreamAir Loyalty Program</h1>
+<body style="font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px;">
+    <header style="text-align: center; border-bottom: 2px solid #eee; padding-bottom: 10px;">
+        <h1>FlyDreamAir SkyRewards</h1>
     </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Earn Points</a>
-        <a href="#">Use Points</a>
-        <a href="#">My Account</a>
+    <nav style="text-align: center; padding: 10px 0;">
+        <a href="#">Home</a> |
+        <a href="#">Earn Points</a> |
+        <a href="#">Use Points</a> |
+        <a href="#">My Account</a> |
         <a href="#">Login</a>
     </nav>
     <main>
-        <section id="welcome">
-            <h2>Welcome, Member!</h2>
+        <section id="welcome" style="margin-bottom: 20px;">
+            <h2>Welcome Back, Alex!</h2>
+            <p>Your journey to amazing rewards starts here. Explore how you can earn and use points with FlyDreamAir and our global partners.</p>
         </section>
-        <section id="points-summary">
-            <h3>Your Points Summary</h3>
+        <section id="points-summary" style="margin-bottom: 20px;">
+            <h3>Your SkyRewards Snapshot</h3>
+            <p><strong>Points Balance:</strong> 12,500</p>
+            <p><strong>Status Tier:</strong> Silver</p>
+            <p>You're only <strong>7,500 points</strong> away from Gold status!</p>
         </section>
         <section id="get-started">
-            <h3>Get Started</h3>
+            <h3>Explore Your Benefits</h3>
+            <ul>
+                <li><strong>Flight Upgrades:</strong> Experience the luxury of our premium cabins.</li>
+                <li><strong>Reward Flights:</strong> Use your points to book flights to exciting destinations.</li>
+                <li><strong>Lounge Access:</strong> Relax in exclusive lounges before you fly.</li>
+                <li><strong>Partner Offers:</strong> Earn and spend points with our hotel and car rental partners.</li>
+            </ul>
         </section>
     </main>
-    <footer>
+    <footer style="text-align: center; border-top: 2px solid #eee; padding-top: 10px; margin-top: 30px;">
         <p>&copy; 2025 FlyDreamAir. All rights reserved.</p>
     </footer>
 </body>
