--- a/Sprint2/FDair_V1_sprint2.html
+++ b/Sprint2/FDair_V1_sprint2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlyDreamAir Loyalty Program - Dashboard</title>
-    <link rel="stylesheet" href="style_v2.css">
+    <link rel="stylesheet" href="style_v3.css">
 </head>
 <body>
     <header>
@@ -18,40 +18,60 @@
             <a href="#">Earn Points</a>
             <a href="#">Use Points</a>
             <a href="#">My Account</a>
-            <a href="#">Login</a>
+            <a href="#" class="login-button">Login</a>
         </div>
     </nav>
-    <main class="container">
-        <section class="card">
+    
+    <section class="hero">
+        <div class="hero-text">
             <h2>Welcome Back, Alex!</h2>
             <p>Your journey to amazing rewards starts here. Explore how you can earn and use points with FlyDreamAir and our global partners.</p>
-        </section>
-        <section class="card">
-            <h3>Your SkyRewards Snapshot</h3>
-            <p><strong>Points Balance:</strong> 12,500</p>
-            <p><strong>Status Tier:</strong> Silver</p>
-            <p>You're only <strong>7,500 points</strong> away from Gold status!</p>
-        </section>
-        <section class="card">
-            <h3>Explore Your Benefits</h3>
-            <ul>
-                <li><strong>Flight Upgrades:</strong> Experience the luxury of our premium cabins.</li>
-                <li><strong>Reward Flights:</strong> Use your points to book flights.</li>
-                <li><strong>Lounge Access:</strong> Relax in exclusive lounges before you fly.</li>
-                <li><strong>Partner Offers:</strong> Earn and spend with our partners.</li>
-            </ul>
-        </section>
+        </div>
+    </section>
+
+    <main class="container">
+        <div class="dashboard-grid">
+            <section class="card">
+                <h3>Your SkyRewards Snapshot</h3>
+                <p class="points-balance">12,500 Points</p>
+                <p><strong>Status Tier:</strong> Silver</p>
+                <p class="status-progress">You're only <strong>7,500 points</strong> away from Gold status!</p>
+            </section>
+            <section class="card">
+                <h3>Explore Your Benefits</h3>
+                <ul>
+                    <li>Flight Upgrades</li>
+                    <li>Reward Flights</li>
+                    <li>Lounge Access</li>
+                    <li>Partner Offers</li>
+                </ul>
+            </section>
+        </div>
         
-        <!-- NEW SECTION -->
+        <!-- THIS SECTION IS ENHANCED AND NOW HAS MORE IMAGES -->
         <section class="card">
-             <h3>Inspiration for Your Next Trip</h3>
+             <h3>Making Every Journey Rewarding</h3>
              <div class="image-container">
-                <img src="../image_assets/FDasset1_family_dubai_tourist.png" alt="Family on a beach in Dubai.">
-                <img src="../image_assets/FDasset2_business_class.png" alt="Business class cabin.">
+                <div class="gallery-item">
+                    <img src="../image_assets/FDasset1_family_dubai_tourist.png" alt="Family on a beach in Dubai.">
+                    <p>Dream Destinations</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="../image_assets/FD_asset4_lounge_airport.png" alt="Relaxing in an airport lounge.">
+                    <p>Exclusive Lounge Access</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="../image_assets/FDasset4_credit_card_points.png" alt="FlyDreamAir credit card.">
+                    <p>Earn With Our Partners</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="../image_assets/FDasset2_business_class.png" alt="Business class cabin.">
+                    <p>Upgrade Your Experience</p>
+                </div>
              </div>
         </section>
-
     </main>
+
     <footer>
         <div class="container">
             <p>&copy; 2025 FlyDreamAir. All rights reserved.</p>
