--- a/Sprint3/earn-points_v1.html
+++ b/Sprint3/earn-points_v1.html
@@ -4,51 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earn Points - FlyDreamAir</title>
+    <style>
+        /* In-built, self-contained CSS for this page */
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+        body{font-family:'Inter',sans-serif;margin:0;padding:0;background-color:#f4f7f6;color:#3a3a3a;}.container{max-width:800px;margin:0 auto;padding:0 20px;}header{background-color:#003366;color:white;padding:20px 0;text-align:center;}nav{background-color:white;padding:15px 0;text-align:center;border-bottom:1px solid #e0e0e0;}nav a{color:#005a9e;text-decoration:none;margin:0 20px;font-weight:600;padding-bottom:5px;}nav a.active{color:#003366;border-bottom:3px solid #003366;}nav a.login-button{color:white !important; border:none; background-color:#005a9e;padding:8px 20px;border-radius:20px;}main{padding:40px 0;}.card{background-color:white;padding:30px;margin-bottom:25px;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.08);}h2,h3{color:#003366;margin-top:0;}footer{background-color:#212529;color:white;text-align:center;padding:30px 0;margin-top:40px;}
+        .form-grid{display:grid;grid-template-columns:auto 1fr;gap:15px 20px;align-items:center;margin-bottom:20px;}.form-grid label{font-weight:600;justify-self:start;}input,select{width:100%;padding:10px;border:1px solid #ccc;border-radius:8px;font-size:1em;box-sizing:border-box;}button{display:block;margin:10px 0 0 auto;background-color:#005a9e;color:white;padding:12px 25px;border-radius:20px;border:none;font-weight:600;font-size:1em;cursor:pointer;transition:background-color .3s ease;}button:hover{background-color:#003366;}.result-box{background-color:#eef7ff;border-left:5px solid #005a9e;padding:20px;margin-top:20px;border-radius:8px;}.result-box p{font-size:1.8em;font-weight:700;color:#003366;margin:0;text-align:center;}
+    </style>
 </head>
 <body>
-    <header><h1>FlyDreamAir SkyRewards</h1></header>
-    <nav>
+    <header><div class="container"><h1>FlyDreamAir SkyRewards</h1></div></header>
+    <nav><div class="container">
         <a href="index.html">Home</a>
-        <a href="earn-points_v3.html">Earn Points</a>
+        <a href="earn-points_v3.html" class="active">Earn Points</a>
         <a href="use-points_v3.html">Use Points</a>
         <a href="#">My Account</a>
-        <a href="#">Login</a>
-    </nav>
-    <main>
-        <h2>Points Calculator</h2>
-        <p>Estimate the points you can earn from flights, hotels, and more.</p>
-        
-        <form id="earn-calculator-form">
-            <label for="activity">Activity Type:</label>
-            <select id="activity" name="activity">
-                <option value="flight">Flight</option>
-                <option value="hotel">Hotel Stay</option>
-                <option value="car">Car Rental</option>
-                <option value="card">Credit Card Spend</option>
-            </select>
-            <br><br>
-
-            <label for="amount">Amount Spent ($USD):</label>
-            <input type="number" id="amount" name="amount" placeholder="e.g., 1500">
-            <br><br>
-
-            <label for="tier">Your Status Tier:</label>
-            <select id="tier" name="tier">
-                <option value="blue">Blue</option>
-                <option value="silver">Silver</option>
-                <option value="gold">Gold</option>
-            </select>
-            <br><br>
-
-            <button type="submit">Calculate Points</button>
-        </form>
-
-        <h3>You could earn:</h3>
-        <div id="points-result">
-            <p>--</p>
+        <a href="#" class="login-button">Login</a>
+    </div></nav>
+    <main class="container">
+        <div class="card">
+            <h2>Points Calculator</h2>
+            <p>Estimate the points you can earn from flights, hotels, and more.</p>
+            <form id="earn-calculator-form">
+                <div class="form-grid">
+                    <label for="activity">Activity Type:</label>
+                    <select id="activity" name="activity">
+                        <option value="flight">Flight</option>
+                        <option value="hotel">Hotel Stay</option>
+                        <option value="car">Car Rental</option>
+                        <option value="card">Credit Card Spend</option>
+                    </select>
+                    <label for="amount">Amount Spent ($USD):</label>
+                    <input type="number" id="amount" name="amount" placeholder="e.g., 1500" min="0">
+                    <label for="tier">Your Status Tier:</label>
+                    <select id="tier" name="tier">
+                        <option value="blue">Blue (Standard)</option>
+                        <option value="silver">Silver (25% Bonus)</option>
+                        <option value="gold">Gold (50% Bonus)</option>
+                    </select>
+                </div>
+                <button type="submit">Calculate Points</button>
+            </form>
+            <div class="result-box">
+                <h3>You could earn:</h3>
+                <p id="points-result">--</p>
+            </div>
         </div>
     </main>
-    <footer><p>&copy; 2025 FlyDreamAir. All rights reserved.</p></footer>
+    <footer><div class="container"><p>&copy; 2025 FlyDreamAir. All rights reserved.</p></div></footer>
 </body>
 </html>
 
